--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Meu primeiro portifólio</title>
+    <style> 
+     
+       body {
+           background-color:wheat
+       }
+    </style>
 </head>
 <body>
 <h1 id="meunome">Halysson Mendes de Sena</h1>
@@ -15,12 +21,12 @@
 
 
 <h2 id="Listadehabilidades"> Lista de habilidades:</h2>
-<ol>
+<ul>
     <li>Sou dedicado;</li>
     <li>Sou batalhador;</li>
     <li> <strong>Uma pessoa altamente comunicativa;</strong> </li>
     <li>Gosto de trabalhar em equipe ;</li>
-</ol>
+</ul>
 
 <p>Indicação de blog:</p>
 <a href="https://mentorama.com.br/profession-web-developer/?roistat_referrer=&roistat_pos=&roistat=google2_g_114209467829_485075735954_curso%20de%20desenvolvimento%20web&utm_source=google&utm_medium=cpc&utm_campaign=28_profession-web-developer_google_cpc_poisk_course_br_code_mntrm&utm_content=cid_11804754128|adg_114209467829|ad_485075735954|ph_kwd-1056168763|key_curso%20de%20desenvolvimento%20web|dev_c|pst_|rgnid_1001538|placement_&utm_term=curso%20de%20desenvolvimento%20web&roistat=google2_g_114209467829_485075735954_curso%20de%20desenvolvimento%20web&gclid=CjwKCAjw9MuCBhBUEiwAbDZ-7vNqXh-8gygsO2Y11tAKNc9Dg9UI8g2inh306QYvHUQP4NpFYNGbmBoCHM4QAvD_BwE" target="_blank">Mentorama.</a>
@@ -29,6 +35,5 @@
 <h3>links para diferentes seções:</h3>
 <a href="#Listadehabilidades">lista de habilidades</a> <br>
 <a href="#meunome">meu nome</a>
-
 </body>
 </html> 
