modificando index e style

--- a/index.html
+++ b/index.html
@@ -3,34 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Meu primeiro portifólio</title>
-    <style> 
-    h1{
-        font-style: oblique;
-    }
-    #descripition {
-        font-style: italic ;
-    }
-    #naturale {
-        font-family: sans-serif
-    }
-    .comunication{
-        font-size: 21px
-    }
-    .worker{
-        font-size: 19px;
-    }
-    .dedicated{
-        font-size: 17px;
-    }
-    .team{
-        font-size: 15px;
-    }
-       body {
-           background-color:rgb(232, 163, 34)
-
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 <h1 id="meunome" style="background-color: white ">Halysson Mendes de Sena</h1>
